# signalrank

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action_plan.md  docker-compose.local.yml  openrouter.txt  pdf_replace.py
signalrank/backend/: .env.example  .env.railway-low-memory.example  Dockerfile  Dockerfile.ranking-worker  Dockerfile.semantic-search  README.md  experiment_cleanup.py  jobdigest_preview.html  pyproject.toml  railway.api.toml  railway.toml  railway.worker.queue.toml  railway.worker.toml  render.yaml
signalrank/backend/alembic/: env.py
signalrank/backend/api/: auth.py  config.py  database.py  db_types.py  deps.py  deps_hunter.py  deps_llm.py  desktop_main.py  helpers.py  logging_setup.py  main.py  models.py  rate_limits.py  sql_compat.py  stats_cache.py  timezone.py  utils.py  worker_main.py
signalrank/backend/batch/: archival_worker.py  career_ops_import.py  context.py  email_verifier.py  embedding_cache.py  hunter.py  job_availability.py  local_sync.py  local_worker.py  maintenance.py  memory.py  quality_report.py  query_builder.py  query_plan_cache.py  ranker.py  recruiter_finder.py  resume_worker.py  run_corpus.py  run_kinds.py  run_progress.py  run_results.py  run_state.py  scrape_cache.py  scrape_pipeline.py  scraper.py  worker.py  worker_main.py
signalrank/backend/config/: base.yaml  skills.yaml
signalrank/backend/data/: resume_example.yaml
signalrank/backend/docs/: local_ranking_best_path.md  ranking_v3_benchmark_findings.md  self_improving_flow_learnings.md  semantic_search_learnings.md  standalone_ranker_refactor_plan.md  standalone_resume_ranker.md  worker_local_testing.md
signalrank/backend/domain/: additive_scoring.py  artifact_versions.py  candidate_profile.py  career_intent.py  company.py  description_quality.py  embed_math.py  embeddings.py  intent_matching.py  job_preferences.py  job_profile.py  job_source.py  match_judge.py  match_verifier.py  negative_keywords.py  non_ic_gate.py  onboarding_profile.py  profile_rules.py  quality_metrics.py  recency.py  resume_editor.py  resume_verifier.py  role_bias.py  role_clusters.py  role_taxonomy.py  roles.py  score_synthesis.py  scoring.py  semantic_gates.py  skill_boost.py  skills.py  title_relevance.py
signalrank/backend/jobdigest/: adya.yaml  config.py  dedup.py  diag.py  digest.py  jobdigest.yaml  run_digest.py  smoke_ingest.py  smoke_score.py
signalrank/backend/llm/: cache.py  email_generator.py  onboarding.py  openrouter.py  providers.py  resume_parser.py  resume_tailor.py
signalrank/backend/output/: google_senior_ml_platform_engineer_email.txt
signalrank/backend/ranking/: profile_fresh_rank.py
signalrank/backend/scripts/: backfill_role_clusters.py  evaluate_onboarding_prompt_variants.py  import_career_ops.py  import_tracker_csv.py  list_openrouter_vision_models.py  migrate_duckdb_jobs.py  profile_fresh_company_rank.py  quick_rank_scraped_jobs.py
signalrank/backend/tests/: _paths.py  conftest.py  test_additive_scoring.py  test_admin_api.py  test_agentic_cache.py  test_agentic_cache_reuse.py  test_amazon_jobs_source.py  test_applications_api.py  (+70 more)
(+482 files in other folders)
