[project]
name = "signalrank-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "email-validator>=2.3.0",
    "bcrypt==4.1.3",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "python-jobspy>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "dnspython>=2.6.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "jinja2>=3.1.0",
    "rapidfuzz>=3.14.3",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: real network calls — skip by default, run with -m live",
    "unit: pure unit tests with no DB or HTTP dependencies (safe for -n auto)",
    "db: tests requiring database access",
    "client: tests requiring HTTP test client",
]
addopts = "-m 'not live'"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
