[package]
name = "signalrank-desktop"
version = "0.1.0"
description = "SignalRank local desktop app"
authors = ["SignalRank"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
